Aulas 5.3 e 5.4 do curso Profissão: Cientista de Dados da EBAC

--- a/Operadores_e_variaveis.ipynb
+++ b/Operadores_e_variaveis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEXbD7cr9GvH+AGheRE84c",
+      "authorship_tag": "ABX9TyMwLGzVGTInxKN/g+DCksZS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,6 +274,77 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Variáveis\n",
+        "Variáveis estão alocadas em espaços na memória"
+      ],
+      "metadata": {
+        "id": "_h8Ll852xNcL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Nome da variável é \"x\" que armazena o valor 10 em um espaço na memória\n",
+        "\n",
+        "x = 10\n",
+        "\n",
+        "print(x) # Utilizar a referencia no nome atribuído"
+      ],
+      "metadata": {
+        "id": "q2RCt5QOxaBS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Regas"
+      ],
+      "metadata": {
+        "id": "LLHIakybxotT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Nome da variável**\n",
+        "\n",
+        "* Começar com letra (a-z) ou sublinhado (_)\n",
+        "* São case sensitive (Diferença entre letras maiúsculas e minúsculas):\n",
+        "A != a\n",
+        "\n",
+        "**Boas Paráticas com Vairáveis**\n",
+        "\n",
+        "\n",
+        "> Exemplo: Multiplicação de 2 números\n",
+        "\n",
+        "Não usar:\n",
+        "\n",
+        "\n",
+        "*   Multiplicação\n",
+        "*   MultiplicaçãoDeDoisNumeros\n",
+        "* m\n",
+        "\n",
+        "Usar:\n",
+        "* multiplicacao\n",
+        "* mult\n",
+        "* mult_total (snake_case)\n",
+        "\n",
+        "Tipos de Variáveis:\n",
+        "> Python é uma linguagem de alto nível\n",
+        "\n",
+        "> Não é necessário especificar o tipo de dados quando declarar a variável\n",
+        "\n",
+        "> Python define o tipo de dados na declaração\n"
+      ],
+      "metadata": {
+        "id": "IuysevQTxq5r"
+      }
     }
   ]
 }
